--- a/package.json
+++ b/package.json
@@ -2,22 +2,16 @@
   "name": "bitcoinTicker",
   "version": "0.0.0",
   "main": "app.js",
-  "babel": {
-    "presets": [
-      "es2015",
-      "react"
-    ]
-  },
   "dependencies": {
-    "babel-cli": "^6.24.1",
-    "babel-preset-es2015": "^6.24.1",
     "fs": "0.0.1-security",
     "lodash": "^4.17.4",
     "moment": "^2.18.1",
     "node-cache": "^4.1.1",
     "path": "^0.12.7",
-    "request": "^2.81.0",
-    "request-promise": "^4.2.0",
     "xmlhttprequest": "^1.8.0"
+  },
+  "scripts": {
+    "test": "jest",
+    "start": "node app.js"
   }
 }
